# $Id$
SET(NuTo_sources
) 

CONFIGURE_FILE(__init__.py ${CMAKE_CURRENT_BINARY_DIR}/__init__.py)
NUTO_INSTALL_PYTHON_FILE(__init__.py ${NUTO_PYTHON_MODULES_INSTALL_PATH}/nuto)

ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(math)
IF(ENABLE_VISUALIZE)
  ADD_SUBDIRECTORY(visualize)
ENDIF(ENABLE_VISUALIZE)
IF(ENABLE_MECHANICS)
  ADD_SUBDIRECTORY(mechanics)
ENDIF(ENABLE_MECHANICS)

IF(ENABLE_METAMODEL)
  ADD_SUBDIRECTORY(metamodel)
ENDIF(ENABLE_METAMODEL)
  
IF(ENABLE_OPTIMIZE)
  ADD_SUBDIRECTORY(optimize)
ENDIF(ENABLE_OPTIMIZE)

