# $Id$
SET(NuTo_sources
) 

CONFIGURE_FILE(__init__.py ${CMAKE_CURRENT_BINARY_DIR}/__init__.py)
NUTO_INSTALL_PYTHON_FILE(__init__.py ${NUTO_PYTHON_MODULES_INSTALL_PATH}/nuto)

ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(math)
IF(ENABLE_VISUALIZE)
  ADD_SUBDIRECTORY(visualize)
ENDIF(ENABLE_VISUALIZE)
IF(ENABLE_MECHANICS)
  ADD_SUBDIRECTORY(mechanics)
ELSE(ENABLE_MECHANICS)
  SET (SEARCH_REGEX "from nuto.mechanics.ModulMechanics")
  FILE(READ ${CMAKE_CURRENT_BINARY_DIR}/__init__.py FILE_CONTENT)
  STRING(REGEX REPLACE "${SEARCH_REGEX}" "#from nuto.mechanics.ModulMechanics"
        MODIFIED_FILE_CONTENT "${FILE_CONTENT}")
 FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/__init__.py "${MODIFIED_FILE_CONTENT}")
ENDIF(ENABLE_MECHANICS)

IF(ENABLE_METAMODEL)
  ADD_SUBDIRECTORY(metamodel)
ELSE(ENABLE_METAMODEL)
 SET (SEARCH_REGEX "from nuto.metamodel.ModulMetaModel")
 FILE(READ ${CMAKE_CURRENT_BINARY_DIR}/__init__.py FILE_CONTENT)
 STRING(REGEX REPLACE "${SEARCH_REGEX}" "#from nuto.metamodel.ModulMetaModel"
        MODIFIED_FILE_CONTENT "${FILE_CONTENT}")
 FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/__init__.py "${MODIFIED_FILE_CONTENT}")
ENDIF(ENABLE_METAMODEL)
  
IF(ENABLE_OPTIMIZE)
  ADD_SUBDIRECTORY(optimize)
ELSE(ENABLE_OPTIMIZE)
  SET (SEARCH_REGEX "from nuto.optimize.ModulOptimizer")
  FILE(READ ${CMAKE_CURRENT_BINARY_DIR}/__init__.py FILE_CONTENT)
  STRING(REGEX REPLACE "${SEARCH_REGEX}" "#from nuto.optimize.ModulOptimizer"
        MODIFIED_FILE_CONTENT "${FILE_CONTENT}")
 FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/__init__.py "${MODIFIED_FILE_CONTENT}")

ENDIF(ENABLE_OPTIMIZE)

